[package]
name = "ic-call-chaos"
version = "0.2.0"
edition = "2021"
authors = ["Ognjen Maric <ognjen.maric@dfinity.org>"]
description = "Chaos monkey library for Internet Computer calls"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oggy-dfin/ic_call_utils"

[dependencies]
futures = "0.3.25"
lazy_static = "1.5.0"
ic-cdk = { workspace = true }
candid = { workspace = true }
rand_chacha = "0.9"
rand = { version = "0.9", default-features = false, features = ["std"] }
