[package]
name = "ic-safe-upgrades"
version = "0.1.0"
edition = "2021"
authors = ["Ognjen Maric <ognjen.maric@dfinity.org>"]
description = "Safe upgrades of Internet Computer canisters controlled by other canisters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oggy-dfin/ic_call_utils"

[features]
use_call_chaos = ["ic-call-retry/use_call_chaos", "dep:ic-call-chaos"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-call-chaos = { path = "../../call_chaos/call_chaos", optional = true }
ic-call-retry = { path = "../../retry/retry" }
ic-management-canister-types = { workspace = true }
serde_bytes = { workspace = true }
sha2 = "0.10.8"

[lib]
crate-type = ["rlib"]
