[package]
name = "call-chaos-pocket-ic-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
lazy_static = "1.5.0"
ic-call-chaos = { path = "../../call_chaos" }
pocket-ic-utils = { path = "../../../pocket_ic_utils" }
candid = { workspace = true }
pocket-ic = "8.0.0"
once_cell = "1.21.3"
hex = "0.4.3"

[package.metadata.release]
release = false
