[package]
name = "safe-upgrades-pocket-ic-test"
version = "0.1.0"
edition = "2021"

[lib]

[dev-dependencies]
lazy_static = "1.5.0"
candid = { workspace = true }
pocket-ic = "8.0.0"
once_cell = "1.21.3"
pocket-ic-utils = { path = "../../../pocket_ic_utils" }

[package.metadata.release]
release = false